--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend-coding-test",
+  "name": "backend-api-taxi",
   "version": "1.0.0",
-  "description": "A coding assessment for Xendit backend interviews",
+  "description": "Taxi API",
   "main": "index.js",
   "directories": {
     "test": "tests"
@@ -18,7 +18,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
-    "sqlite3": "^4.0.6"
+    "sqlite3": "^4.0.6",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.2.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
