--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   },
   "scripts": {
     "test": "mocha tests",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint .",
+    "coverage": "nyc npm test"
   },
+  "pre-push": [
+    "coverage"
+  ],
   "keywords": [
     "Xendit"
   ],
@@ -22,12 +27,20 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-winston": "^4.2.0",
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.2.0"
+    "swagger-ui-express": "^4.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-mocha": "^10.0.3",
     "mocha": "^6.1.4",
+    "nyc": "^15.1.0",
+    "pre-push": "^0.1.1",
     "supertest": "^4.0.2"
   }
 }
