--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - ./node_modules
       - run:
           name: check
-          command: npm run lint; npm run coverage
+          command: npm run lint; npm test
 
 workflows:
   version: 2
