--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-api-taxi",
   "version": "1.0.0",
   "description": "Taxi API",
-  "main": "index.js",
+  "main": "src/index.ts",
   "engines": {
     "node": "14.x.x",
     "npm": "6.x.x"
@@ -11,11 +11,14 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "nyc npm run mocha",
-    "start": "node index.js",
+    "build": "tsc",
+    "start:prod": "node dist/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "lint": "eslint .",
-    "mocha": "mocha tests"
+    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "test:cov": "nyc npm test"
   },
+  "prestart": "npm run build",
   "pre-push": [
     "lint",
     "test"
@@ -36,6 +39,13 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
+    "@types/sqlite3": "^3.1.7",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
@@ -43,6 +53,9 @@
     "mocha": "^6.1.4",
     "nyc": "^15.1.0",
     "pre-push": "^0.1.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
