--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-winston": "^4.2.0",
+    "sinon": "^12.0.1",
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
@@ -48,6 +49,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "chai": "^4.3.4",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
